--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,21 @@ a:hover {
 }
 
 #navsection-adv {
-    height: 100px;
+    outline: 1px solid #ececec;
+    outline-offset: 25px;
 }
 
 #logo-adv{
+    margin:auto;
     margin-left: 10px;
 }
 
-#titlepage-adv {
-
+#titlepage-adv{
+    margin-left: 40px;
+    color: #D93025;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    font-size: 20px;
 }
 
 #navbar {
@@ -33,8 +39,9 @@ a:hover {
 }
 
 #navbar-section {
-    /* display: flex;
-    flex-direction: row-reverse; */
+    display: flex;
+    flex-direction: row;
+    margin-right: 0;
 }
 
 #search-body{
@@ -55,7 +62,7 @@ a:hover {
     height: 95px;
 }
 
-#searchbar-input{
+.searchbar-input{
     width: 450px;
     height: 45px;
     /* border-radius: 35px; */
@@ -63,7 +70,7 @@ a:hover {
     border-radius: 35px;
     font-size: 15px;
     outline: none;
-    padding: 0px 40px 0px;
+    padding: 0px 45px 0px;
 }
 
 #searchbar-input:hover{
@@ -95,9 +102,38 @@ a:hover {
     flex-direction: column;
 }
 
+#search-body-adv{
+    margin-left: 40px;
+    margin-top: 70px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#titlesearch-adv{
+    font-size: 16px;
+    flex: 1;
+}
+
+#titlesearch-detail-adv{
+    flex: 1;
+}
+
+#titlessearch-adv{
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+}
+
+.field-label-adv{
+    font-size: 13px;
+}
+
+.field-adv{
+    margin-top: 20px;
+}
+
 .navbar-pic-adv {
     height: 40px;
-    padding-top: 5px;
+    padding-top: 0px;
 }
 
 .mainbody{
@@ -152,4 +188,35 @@ a:hover {
 
 .navbar-pic:hover{
     border: 5px solid  #dcdcdc;
+}
+
+.search-icon {
+    position: absolute;
+    top: 16px;
+    left: 20px;
+    width: 14px;
+}
+
+.clear-icon {
+    position: absolute;
+    top: 9px;
+    right: 17px;
+    width: 30px;
+    cursor: pointer;
+    visibility: hidden;
+}
+
+.searchbar-wrapper {
+    position: relative;
+    display: flex;
+    min-width: 100px;
+    margin: auto;
+}
+
+.searchbutton-icon-img{
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    width: 25px;
+    cursor: pointer;
 }
